--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,7 +35,7 @@ body {
     --primary: 201 96% 32%;
     --primary-foreground: 210 40% 98%;
 
-    --secondary: 35 100% 50%;
+    --secondary: 189, 99%, 31%;
     --secondary-foreground: 222.2 47.4% 11.2%;
 
     --accent: 150 100% 38%;
@@ -68,7 +68,7 @@ body {
     --primary: 201 96% 32%;
     --primary-foreground: 210 40% 98%;
 
-    --secondary: 35 100% 50%;
+    --secondary: 189, 99%, 31%;
     --secondary-foreground: 222.2 47.4% 11.2%;
 
     --accent: 150 100% 38%;
@@ -97,6 +97,6 @@ body {
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-gray-50 text-foreground;
   }
 }
